[gd_scene load_steps=3 format=3 uid="uid://dd4d7t1lhb07m"]

[ext_resource type="Script" path="res://HiveHall.gd" id="1_s6b4t"]
[ext_resource type="PackedScene" path="res://Player.tscn" id="2_34c1q"]
[ext_resource type="PackedScene" path="res://Door.tscn" id="3_l8h5f"]

[node name="HiveHall" type="Node2D"]
script = ExtResource("1_s6b4t")

[node name="Player" parent="." instance=ExtResource("2_34c1q")]
position = Vector2(800, 600)

[node name="Background" type="ColorRect" parent="."]
z_index = -10
offset_right = 1600
offset_bottom = 1200
color = Color(0.3, 0.3, 0.3, 1)

[node name="CenterHex" type="Polygon2D" parent="."]
position = Vector2(800, 600)
color = Color(0.5, 0.5, 0.5, 1)
polygon = PackedVector2Array(-100, -174, 100, -174, 200, 0, 100, 174, -100, 174, -200, 0)

[node name="Door1" parent="." instance=ExtResource("3_l8h5f")]
position = Vector2(800, 300)
door_id = "door1"
target_scene = "res://RegularRoom.tscn"
target_room_id = "room_1"

[node name="Door2" parent="." instance=ExtResource("3_l8h5f")]
position = Vector2(1100, 450)
door_id = "door2"
target_scene = "res://RegularRoom.tscn"
target_room_id = "room_2"

[node name="Door3" parent="." instance=ExtResource("3_l8h5f")]
position = Vector2(1100, 750)
door_id = "door3"
target_scene = "res://RegularRoom.tscn"
target_room_id = "room_3"

[node name="Door4" parent="." instance=ExtResource("3_l8h5f")]
position = Vector2(800, 900)
door_id = "door4"
target_scene = "res://RegularRoom.tscn"
target_room_id = "room_4"

[node name="Door5" parent="." instance=ExtResource("3_l8h5f")]
position = Vector2(500, 750)
door_id = "door5"
target_scene = "res://RegularRoom.tscn"
target_room_id = "room_5"

[node name="Door6" parent="." instance=ExtResource("3_l8h5f")]
position = Vector2(500, 450)
door_id = "door6"
target_scene = "res://RegularRoom.tscn"
target_room_id = "room_6"